// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList custom cell renderer 1`] = `
<div
  className="storybook-container"
>
  <div
    aria-label="Structured list section"
    className="bx--structured-list bx--structured-list--selection"
    data-testid="structured-list"
    role="table"
  >
    <div
      className="bx--structured-list-thead"
      data-testid="structured-list-head"
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row bx--structured-list-row--header-row"
        role="row"
      >
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="A"
        >
          A
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="B"
        >
          B
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="C"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="bx--structured-list-tbody"
      data-testid="structured-list-body"
      onKeyDown={[Function]}
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-0"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title={null}
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            <div />
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey B"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey B
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey C"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey C
          </span>
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-1"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey A again fixed column width"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey A again fixed column width
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey B again"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey B again
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey C again"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey C again
          </span>
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-2"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey A"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey hey A
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey B"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey hey B
          </span>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey C"
        >
          <span
            style={
              Object {
                "color": "blue",
              }
            }
          >
            hey hey C
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList default  1`] = `
<div
  className="storybook-container"
>
  <div
    aria-label="Structured list section"
    className="bx--structured-list bx--structured-list--selection"
    data-testid="structured-list"
    role="table"
  >
    <div
      className="bx--structured-list-thead"
      data-testid="structured-list-head"
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row bx--structured-list-row--header-row"
        role="row"
      >
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="A"
        >
          A
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="B"
        >
          B
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="C"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="bx--structured-list-tbody"
      data-testid="structured-list-body"
      onKeyDown={[Function]}
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-0"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title={null}
        >
          <div />
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey B"
        >
          hey B
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey C"
        >
          hey C
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-1"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey A again fixed column width"
        >
          hey A again fixed column width
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey B again"
        >
          hey B again
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey C again"
        >
          hey C again
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-2"
        onClick={[Function]}
        role="row"
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey A"
        >
          hey hey A
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey B"
        >
          hey hey B
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": undefined,
            }
          }
          title="hey hey C"
        >
          hey hey C
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList with empty state 1`] = `
<div
  className="storybook-container"
>
  <div
    aria-label="Structured list section"
    className="bx--structured-list bx--structured-list--selection"
    data-testid="structured-list"
    role="table"
  >
    <div
      className="bx--structured-list-thead"
      data-testid="structured-list-head"
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row bx--structured-list-row--header-row"
        role="row"
      >
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="A"
        >
          A
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="B"
        >
          B
        </div>
        <div
          className="bx--structured-list-th"
          role="columnheader"
          title="C"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="bx--structured-list-tbody"
      data-testid="structured-list-body"
      onKeyDown={[Function]}
      role="rowgroup"
    />
    <div
      className="iot--composed-structured-list__empty-content"
      data-testid="structured-list-empty"
    >
      <svg
        aria-hidden={true}
        fill="#5a6872"
        focusable="false"
        height={100}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={100}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
        />
      </svg>
      <div
        className="iot--composed-structured-list__loading"
      >
        No data is available yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList with empty state with fixed column width 1`] = `
<div
  className="storybook-container"
>
  <div
    aria-label="Structured list section"
    className="bx--structured-list iot--composed-structured-list__wrapper bx--structured-list--selection"
    data-testid="structured-list"
    role="table"
  >
    <div
      className="bx--structured-list-thead"
      data-testid="structured-list-head"
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row bx--structured-list-row--header-row"
        role="row"
      >
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="A"
        >
          A
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="B"
        >
          B
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="C"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="bx--structured-list-tbody"
      data-testid="structured-list-body"
      onKeyDown={[Function]}
      role="rowgroup"
    />
    <div
      className="iot--composed-structured-list__empty-content"
      data-testid="structured-list-empty"
    >
      <svg
        aria-hidden={true}
        fill="#5a6872"
        focusable="false"
        height={100}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width={100}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
        />
      </svg>
      <div
        className="iot--composed-structured-list__loading"
      >
        No data is available yet.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList with fixed column widths 1`] = `
<div
  className="storybook-container"
>
  <div
    aria-label="Structured list section"
    className="bx--structured-list iot--composed-structured-list__wrapper bx--structured-list--selection"
    data-testid="structured-list"
    role="table"
  >
    <div
      className="bx--structured-list-thead"
      data-testid="structured-list-head"
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row bx--structured-list-row--header-row"
        role="row"
      >
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="A"
        >
          A
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="B"
        >
          B
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-th"
          role="columnheader"
          title="C"
        >
          C
        </div>
      </div>
    </div>
    <div
      className="bx--structured-list-tbody"
      data-testid="structured-list-body"
      onKeyDown={[Function]}
      role="rowgroup"
    >
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-0"
        onClick={[Function]}
        role="row"
      >
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "10rem",
            }
          }
          title={null}
        >
          <div />
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "12rem",
            }
          }
          title="hey B"
        >
          hey B
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "14rem",
            }
          }
          title="hey C"
        >
          hey C
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-1"
        onClick={[Function]}
        role="row"
      >
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "10rem",
            }
          }
          title="hey A again fixed column width"
        >
          hey A again fixed column width
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "12rem",
            }
          }
          title="hey B again"
        >
          hey B again
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "14rem",
            }
          }
          title="hey C again"
        >
          hey C again
        </div>
      </div>
      <div
        className="bx--structured-list-row"
        data-testid="structured-list-row-row-2"
        onClick={[Function]}
        role="row"
      >
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "10rem",
            }
          }
          title="hey hey A"
        >
          hey hey A
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "12rem",
            }
          }
          title="hey hey B"
        >
          hey hey B
        </div>
        <div
          className="iot--composed-structured-list__list-cell bx--structured-list-td bx--structured-list-content--nowrap"
          role="cell"
          style={
            Object {
              "--width": "14rem",
            }
          }
          title="hey hey C"
        >
          hey hey C
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Deprecated/🚫 ComposedStructuredList ️⛔ Deprecation Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    className="bx--toast-notification bx--toast-notification--warning"
    kind="warning"
    role="alert"
    style={
      Object {
        "marginBottom": "0.5rem",
        "minWidth": "30rem",
      }
    }
  >
    <svg
      aria-hidden={true}
      className="bx--toast-notification__icon"
      fill="currentColor"
      focusable="false"
      height={20}
      preserveAspectRatio="xMidYMid meet"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1	s1,0.4,1,1S10.6,16,10,16z"
      />
      <path
        d="M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S10.6,16,10,16z"
        data-icon-path="inner-path"
        opacity="0"
      />
      <title>
        warning icon
      </title>
    </svg>
    <div
      className="bx--toast-notification__details"
    >
      <h3
        className="bx--toast-notification__title"
      >
        Deprecation Notice
      </h3>
      <div
        className="bx--toast-notification__subtitle"
      >
        ComposedStructuredList has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
      </div>
      <div
        className="bx--toast-notification__caption"
      >
        Refactor usages of ComposedStructuredList to use StructuredList instead.
      </div>
    </div>
  </div>
</div>
`;
